[gd_scene load_steps=9 format=2]

[ext_resource path="res://data/game/victoria/Downloader.gd" type="Script" id=1]
[ext_resource path="res://data/game/victoria/ventanasecretDL.png" type="Texture" id=2]
[ext_resource path="res://data/game/barra_carga/BarraCarga.tscn" type="PackedScene" id=3]
[ext_resource path="res://data/game/victoria/FakeLanding.tscn" type="PackedScene" id=4]
[ext_resource path="res://data/game/victoria/FreePalmPilot.tscn" type="PackedScene" id=5]
[ext_resource path="res://data/game/victoria/CyberSecurity.tscn" type="PackedScene" id=6]
[ext_resource path="res://data/game/victoria/TrueShape.tscn" type="PackedScene" id=7]
[ext_resource path="res://data/game/help/HelpWindow.tscn" type="PackedScene" id=8]

[node name="Node2D" type="Node2D"]

position = Vector2( 500.579, 420.187 )
script = ExtResource( 1 )

[node name="Window" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="BarraCarga" parent="Window" index="0" instance=ExtResource( 3 )]

position = Vector2( -130.452, 4.8371 )

[node name="FakeLanding" parent="." index="1" instance=ExtResource( 4 )]

position = Vector2( -30.9484, -148.341 )

[node name="FreePalmPilot" parent="." index="2" instance=ExtResource( 5 )]

position = Vector2( 162.127, -100.179 )

[node name="CyberSecurity" parent="." index="3" instance=ExtResource( 6 )]

position = Vector2( -294.594, -55.0398 )

[node name="TrueShape" parent="." index="4" instance=ExtResource( 7 )]

position = Vector2( 219.688, 70.1127 )

[node name="HelpWindow" parent="." index="5" instance=ExtResource( 8 )]

position = Vector2( -348.94, -105.311 )


